production/helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  template:
    spec:
      serviceAccountName: helloworld-service-account
      containers:
      - name: helloworld
        imagePullPolicy: Never # Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65532
          runAsGroup: 65532
        resources:
          requests:
            memory: "190Mi"
            cpu: "0.5"
          limits:
            memory: "250Mi"
            cpu: "1"
        volumeMounts:
          - name: helloworld-config
            mountPath: /config
            readOnly: true
      volumes:
        - name: helloworld-config
          configMap:
            name: helloworld-config-map
            items:
              - key: application-kubernetes.properties
                path: application-kubernetes.properties
